--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,98 @@
-.App {
+body {
+  margin: 0;
+  box-sizing: border-box;
+}
+
+.app {
+  min-height: 100%;
+  min-width: 100%;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  min-height: 100vh;
+}
+
+header {
+  background-color: #051e52;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+main {
+  flex-grow: 1;
+  background-color: rgb(236, 203, 236);
+  color: #051e52;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* board */
+
+.board > * {
+  margin-top: 0;
+  margin-bottom: 30px;
+}
+
+.board {
+  padding-top: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.description {
+  width: 400px;
+  border: solid 2px #051e52;
+  height: 80px;
+  margin-bottom: 30px;
+}
+
+.opponents {
+  width: 500px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 30px;
+}
+
+.user {
+  width: 80px;
+  height: 100px;
+  background-color: aliceblue;
+}
+
+.hidden-cards {
+  width: 250px;
+  height: 150px;
+  border: 2px solid rgb(47, 4, 27);
+  background-color: rgb(241, 226, 234);
+  color: #051e52;
+  margin-bottom: 30px;
+}
+
+.cards {
+  display: flex;
+  justify-content: space-between;
+  height: 450px;
+  width: 860px;
+}
+
+.card {
+  background-color: rgb(126, 25, 79);
+  width: 200px;
+  height: 250px;
+  border: 2px solid rgb(47, 4, 27);
+}
+
+.card > img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.current-user {
+  width: 900px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.current-card {
+  border: 1px solid grey;
 }
